--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,28 +9,30 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     nav.navbar.navbar-default.navbar-fixed-top
-            .container
-                .navbar-header
-                    button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar',aria-expanded='false', aria-controls='navbar')
-                        span.sr-only Toggle Navigation
-                        span.icon-bar
-                        span.icon-bar
-                        span.icon-bar
-                    a.navbar-brand(href='/') JustBlog
-                #navbar.collapse.navbar-collapse
-                    ul.nav.navbar-nav
-                        if feuser
-                            li(class=(title === 'Posts' ? 'active' : ''))
-                                a(href='/posts') Posts
-                        if !feuser
-                            li(class=(title === 'Register' ? 'active' : ''))
-                                a(href='/users/register') Register
-                            li(class=(title === 'Login' ? 'active' : ''))
-                                a(href='/users/login') Login
-                    ul.nav.navbar-nav.navbar-right
-                        if feuser
-                            li
-                                a(href='/users/logout') Logout
+        .container
+            .navbar-header
+                button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar',aria-expanded='false', aria-controls='navbar')
+                    span.sr-only Toggle Navigation
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+                a.navbar-brand(href='/') JustBlog
+            #navbar.collapse.navbar-collapse
+                ul.nav.navbar-nav
+                    if feuser
+                        li(class=(title === 'Posts' ? 'active' : ''))
+                            a(href='/posts') Posts
+                        li(class=(title === 'Category'? 'active': ''))
+                            a(href='/categories') Category
+                    if !feuser
+                        li(class=(title === 'Register' ? 'active' : ''))
+                            a(href='/users/register') Register
+                        li(class=(title === 'Login' ? 'active' : ''))
+                            a(href='/users/login') Login
+                ul.nav.navbar-nav.navbar-right
+                    if feuser
+                        li
+                            a(href='/users/logout') Logout
     .container
         // != messages() to display flash messages from connect-flash module
         != messages()
