--- a/views/posts/posts.jade
+++ b/views/posts/posts.jade
@@ -1,14 +1,20 @@
 extends ../layout
 
 block content
-  h1 Members Area
-  p Welcome to members area
+    .container
+        h1 Members Area
+        p Welcome to members area
 
-  <button type="submit" class="btn btn-default"><a href="/posts/newpost">Add Post</a></button>
-  <button type="submit" class="btn btn-default"><a href="/posts/newcategory">Add Category</a></button>
+        <button type="submit" class="btn btn-default"><a href="/posts/newpost">Add Post</a></button>
+        
 
-  .container
-    if posts
-        each post in posts
-            .post
-                h1 #{post.title} on #{moment(post.date).format("MM-DD-YYYY")}
+    .container
+        if posts
+            each post in posts
+                .post
+                    h1 
+                        a(href='/posts/#{post.title}') #{post.title}
+                    p.meta by #{post.author}, #{moment(post.date).format("MM-DD-YYYY")}
+                    a(href='/posts/#{post.title}')
+                        img(src='/images/uploads/#{post.postimage}')
+                    p!=post.content
