--- a/views/users/login.jade
+++ b/views/users/login.jade
@@ -1,13 +1,14 @@
 extends ../layout
 
 block content
-  h1 Login
-  p Please login for access
-  form(method='post', action='/users/login')
-    .form-group
-        label Username
-        input.form-control(name='username', type='text', placeholder='Username')
-    .form-group
-        label Password
-        input.form-control(name='password', type='password', placeholder='Password')
-    <button type="submit" class="btn btn-default">Login</button>
+  .container
+    h1 Login
+    p Please login for access
+    form(method='post', action='/users/login')
+      .form-group
+          label Username
+          input.form-control(name='username', type='text', placeholder='Username')
+      .form-group
+          label Password
+          input.form-control(name='password', type='password', placeholder='Password')
+      <button type="submit" class="btn btn-default">Login</button>
