--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,13 @@
 doctype html
 html
   head
-    title #{title} NodeBlog
+    title #{title} | JustBlog
     meta( charset='utf-8' )
     meta( http-equiv='X-UA-Compatible', content='IE=edge' )
     meta( name='viewport', content='width=device-width, initial-scale=1.0' )
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/font-awesome/css/font-awesome.min.css')
   body
     nav.navbar.navbar-default.navbar-fixed-top
         .container
