--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,5 +42,6 @@ html
 
     script( src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
     script( src='/javascripts/bootstrap.js' )
+    script( src='/javascripts/custom.js' )
 
     
