--- a/views/categories/postsbycategory.jade
+++ b/views/categories/postsbycategory.jade
@@ -2,11 +2,9 @@ extends ../layout
 
 block content
     .container
-        h1!=title    
-
-    .container
         .row
-            .col-md-8
+            .col-md-8.col-md-offset-2
+                h1!=title  
                 if posts
                     each post in posts
                         .post
