--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,43 @@
 extends layout
 
 block content
-  h1 Just Blog
-  p Welcome to the new light weight blogging platform
+    .container
+        .row
+            .col-md-8.col-md-offset-2
+                h1 Latest Stories
+                br
+                <button type="submit" class="btn btn-default"><a href="/posts/newpost">Add Your Post</a></button>
+        
+
+    .container
+        .row
+            .col-md-8.col-md-offset-2
+                if posts
+                    each post in posts
+                        .post
+                            h1 
+                                a(href='/posts/#{post.author}/#{post.title}') #{post.title}
+                                span.post-btn
+                                    a(data-toggle='modal', data-target='#del-post', href='#del-post', data-id='#{post.title}')
+                                        i.fa.fa-trash-o
+                                    
+                                span.post-btn
+                                    a(href='/posts/#{post.title}/edit') 
+                                        i.fa.fa-pencil
+
+                            p.post-details
+                                i.fa.fa-user   
+                                    !=post.author
+                                i.fa.fa-clock-o   
+                                    !=formatDate(post.date)
+                                i.fa.fa-folder
+                                    a(href='/categories/#{post.category}')   #{post.category}
+                            .postimage
+                                a(href='/posts/#{post.title}')
+                                    img(src='/images/uploads/#{post.postimage}')
+                            p
+                                != truncate(post.content)
+                                a(href='/posts/#{post.title}')  ...Read More
+
+
 
