--- a/views/posts/posts.jade
+++ b/views/posts/posts.jade
@@ -2,20 +2,22 @@ extends ../layout
 
 block content
     .container
-        h1 Members Area
-        p Welcome to members area
+        .row
+            .col-md-8.col-md-offset-2
+                h1 Members Area
+                p Welcome to members area
 
-        <button type="submit" class="btn btn-default"><a href="/posts/newpost">Add Post</a></button>
+                <button type="submit" class="btn btn-default"><a href="/posts/newpost">Add Post</a></button>
         
 
     .container
         .row
-            .col-md-8
+            .col-md-8.col-md-offset-2
                 if posts
                     each post in posts
                         .post
                             h1 
-                                a(href='/posts/#{post.title}') #{post.title}
+                                a(href='/posts/#{post.author}/#{post.title}') #{post.title}
                                 span.post-btn
                                     a(data-toggle='modal', data-target='#del-post', href='#del-post', data-id='#{post.title}')
                                         i.fa.fa-trash-o
@@ -39,15 +41,5 @@ block content
                                 a(href='/posts/#{post.title}')  ...Read More
 
 
-    // Modal for Deleting Post
-    #del-post.modal.fade(tabindex='-1', role='dialog', aria-labelledby='DelPostModal')
-      .modal-dialog(role='document')
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-label='Close')
-              span(aria-hidden='true') ×
-            h4#DelPostModal.modal-title Are you sure?
-          .modal-footer            
-            button.btn.btn-danger(type="submit", id='del-post-btn') Delete
-            button.btn.btn-default(type='button', data-dismiss='modal') Cancel
+    include ../templates/post_modal.jade
 
