refactor app structure to make it more modular

--- a/lib/categories/views/categories.jade
+++ b/lib/categories/views/categories.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../../views/layout
 
 block content
     .container
@@ -28,4 +28,4 @@ block content
     
     
             
-    include ../templates/category_modal.jade
+    include category_modal.jade
