--- a/lib/posts/views/posts.jade
+++ b/lib/posts/views/posts.jade
@@ -1,12 +1,13 @@
-extends layout
+extends ../../views/layout
 
 block content
     .container
         .row
             .col-md-8.col-md-offset-2
-                h1 Latest Stories
-                br
-                <button type="submit" class="btn btn-default"><a href="/posts/newpost">Add Your Post</a></button>
+                h1 Members Area
+                p Welcome to members area
+
+                <button type="submit" class="btn btn-default"><a href="/posts/newpost">Add Post</a></button>
         
 
     .container
@@ -33,11 +34,12 @@ block content
                                 i.fa.fa-folder
                                     a(href='/categories/#{post.category}')   #{post.category}
                             .postimage
-                                a(href='/posts/#{post.title}')
+                                a(href='/posts/#{post.author}/#{post.title}')
                                     img(src='/images/uploads/#{post.postimage}')
                             p
                                 != truncate(post.content)
-                                a(href='/posts/#{post.title}')  ...Read More
+                                a(href='/posts/#{post.author}/#{post.title}')  ...Read More
 
 
+    include post_modal.jade
 
