--- a/lib/users/views/register.jade
+++ b/lib/users/views/register.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../../views/layout
 
 block content
     .container
@@ -30,4 +30,4 @@ block content
         .form-group
             label Profile Image
             input.form-control(name='profileimg', type='file')
-        <button type="submit" class="btn btn-default">Register</button>
+        button.btn.btn-default(type='submit') Register
