--- a/lib/views/index.jade
+++ b/lib/views/index.jade
@@ -1,13 +1,12 @@
-extends ../layout
+extends layout
 
 block content
     .container
         .row
             .col-md-8.col-md-offset-2
-                h1 Members Area
-                p Welcome to members area
-
-                <button type="submit" class="btn btn-default"><a href="/posts/newpost">Add Post</a></button>
+                h1 Latest Stories
+                br
+                <button type="submit" class="btn btn-default"><a href="/posts/newpost">Add Your Post</a></button>
         
 
     .container
@@ -18,14 +17,7 @@ block content
                         .post
                             h1 
                                 a(href='/posts/#{post.author}/#{post.title}') #{post.title}
-                                span.post-btn
-                                    a(data-toggle='modal', data-target='#del-post', href='#del-post', data-id='#{post.title}')
-                                        i.fa.fa-trash-o
-                                    
-                                span.post-btn
-                                    a(href='/posts/#{post.title}/edit') 
-                                        i.fa.fa-pencil
-
+                                
                             p.post-details
                                 i.fa.fa-user   
                                     !=post.author
@@ -34,12 +26,11 @@ block content
                                 i.fa.fa-folder
                                     a(href='/categories/#{post.category}')   #{post.category}
                             .postimage
-                                a(href='/posts/#{post.title}')
+                                a(href='/posts/#{post.author}/#{post.title}')
                                     img(src='/images/uploads/#{post.postimage}')
                             p
                                 != truncate(post.content)
                                 a(href='/posts/#{post.title}')  ...Read More
 
 
-    include ../templates/post_modal.jade
 
