--- a/lib/categories/views/postsbycategory.jade
+++ b/lib/categories/views/postsbycategory.jade
@@ -9,15 +9,15 @@ block content
                     each post in posts
                         .post
                             h1 
-                                a(href='/posts/#{post.author}/#{post.title}') #{post.title}
+                                a(href=PostSlug.get(post)) #{post.title}
                             p.post-details
                                 i.fa.fa-user   
                                     !=post.author
                                 i.fa.fa-clock-o   
                                     != formatDate(post.date)
                             .postimage
-                                a(href='/posts/#{post.author}/#{post.title}')
+                                a(href=PostSlug.get(post))
                                     img(src='/images/uploads/#{post.postimage}')
                             p
                                 != truncate(post.content)
-                                a(href='/posts/#{post.author}/#{post.title}')  ...Read More
+                                a(href=PostSlug.get(post))  ...Read More
